Page MenuHome GnuPG

git head compilation without ldap fails
Closed, ResolvedPublic

Description

I can't compile current git without ldap:
./configure --enable-maintainer-mode --disable-ldap; make
[...]
gcc -DHAVE_CONFIG_H -I. -I.. -I../common -
DLOCALEDIR=\"/usr/local/share/locale\" -DGNUPG_BINDIR="\"/usr/local/bin\"" -
DGNUPG_LIBEXECDIR="\"/usr/local/libexec\"" -
DGNUPG_LIBDIR="\"/usr/local/lib/gnupg\"" -
DGNUPG_DATADIR="\"/usr/local/share/gnupg\"" -
DGNUPG_SYSCONFDIR="\"/usr/local/etc/gnupg\"" -
DGNUPG_LOCALSTATEDIR="\"/usr/local/var\"" -g -O2 -O3 -Wall -Wcast-
align -Wshadow -Wstrict-prototypes -Wformat -Wno-format-y2k -Wformat-security -W
-Wno-sign-compare -Wno-missing-field-initializers -Wdeclaration-after-statement
-Wno-pointer-sign -Wpointer-arith -MT ks-engine-ldap.o -MD -MP -MF .deps/ks-
engine-ldap.Tpo -c -o ks-engine-ldap.o ks-engine-ldap.c
ks-engine-ldap.c:43:19: fatal error: ldap.h: No such file or directory

If ldap is required now (I hope not) then configure shouldn't offer a --disable-
ldap option.

Event Timeline

LDAP has not been made a hard requirement; this is a bug.

neal added a project: Restricted Project.Apr 13 2015, 12:04 PM

This should be fixed in 5cde5bf. I tested building with LDAP and without. I
also ran some basic queries in the LDAP case and everything seemed ok. If I
don't hear about any further issues, I'll close this in the next few days.

neal claimed this task.
neal added a project: dirmngr.
neal removed a project: Restricted Project.